--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                             <!-- login / signup button wrap -->
                             <ul class="login--wrap">
                                 <li class="login__li">
-                                    <a href="" class="login__a login--btn"
+                                    <a href="" class="login__a login--btn link"
                                         >Login</a
                                     >
                                 </li>
                                 <li class="login__li">
-                                    <a href="" class="login__a signup--btn"
+                                    <a href="" class="login__a signup--btn link"
                                         >Sign Up</a
                                     >
                                 </li>
