--- a/index.html
+++ b/index.html
@@ -152,5 +152,6 @@
                 >Frontend Mentor</a
             >. Coded by <a href="#">Your Name Here</a>.
         </div> -->
+        <script type="module" src="js/script.js"></script>
     </body>
 </html>
