more button stles / call to action
styled the call to action section + more button styles. need to start working on making the nav work on mobile

--- a/index.html
+++ b/index.html
@@ -97,12 +97,18 @@
                             <!-- login / signup button wrap -->
                             <ul class="login--wrap">
                                 <li class="login__li">
-                                    <a href="" class="login__a login--btn link"
+                                    <a href="" class="login__a login--btn"
                                         >Login</a
                                     >
                                 </li>
                                 <li class="login__li">
-                                    <a href="" class="login__a signup--btn link"
+                                    <a
+                                        href=""
+                                        class="
+                                            login__a
+                                            signup--btn
+                                            button-white
+                                        "
                                         >Sign Up</a
                                     >
                                 </li>
@@ -113,12 +119,27 @@
                     <!-- menu--wrap ends -->
                 </nav>
             </header>
+
+            <div class="call-to-action--container">
+                <div class="call-to-action--wrap">
+                    <h1 class="cta__h1">A modern publishing platform</h1>
+                    <p class="cta__p">
+                        Grow your audience and build your online brand
+                    </p>
+                    <div class="cta__link--wrap">
+                        <a href="" class="button-white start-btn"
+                            >Start for Free</a
+                        ><a href="" class="button-outline learn-btn"
+                            >Learn More</a
+                        >
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- intro--container ends -->
         <!--       
                     
-             A modern publishing platform Grow your audience and build
-            your online brand Start for Free Learn More Designed for the future
+                 Designed for the future
             Introducing an extensible editor Blogr features an exceedingly
             intuitive interface which lets you focus on one thing: creating
             content. The editor supports management of multiple blogs and allows
