--- a/index.html
+++ b/index.html
@@ -144,33 +144,33 @@
                     <h2 class="designed__h2">Designed for the future</h2>
                     <div class="designed-content--wrap">
                         <div class="designed-content__info--wrap">
-                            <div class="info__top">
-                                <h3 class="top__h3">
-                                    Introducing an extensible editor
-                                </h3>
-                                <p class="top__p">
-                                    Blogr features an exceedingly intuitive
-                                    interface which lets you focus on one thing:
-                                    creating content. The editor supports
-                                    management of multiple blogs and allows easy
-                                    manipulation of embeds such as images,
-                                    videos, and Markdown. Extensibility with
-                                    plugins and themes provide easy ways to add
-                                    functionality or change the looks of a blog.
-                                </p>
-                            </div>
-                            <div class="info__bottom">
-                                <h3 class="bottom__h3">
-                                    Robust content management
-                                </h3>
-                                <p class="bottom__p">
-                                    Flexible content management enables users to
-                                    easily move through posts. Increase the
-                                    usability of your blog by adding customized
-                                    categories, sections, format, or flow. With
-                                    this functionality, you’re in full control.
-                                </p>
-                            </div>
+                            <!-- <div class="info__top"> -->
+                            <h3 class="top__h3">
+                                Introducing an extensible editor
+                            </h3>
+                            <p class="top__p">
+                                Blogr features an exceedingly intuitive
+                                interface which lets you focus on one thing:
+                                creating content. The editor supports management
+                                of multiple blogs and allows easy manipulation
+                                of embeds such as images, videos, and Markdown.
+                                Extensibility with plugins and themes provide
+                                easy ways to add functionality or change the
+                                looks of a blog.
+                            </p>
+                            <!-- </div> -->
+                            <!-- <div class="info__bottom"> -->
+                            <h3 class="bottom__h3">
+                                Robust content management
+                            </h3>
+                            <p class="bottom__p">
+                                Flexible content management enables users to
+                                easily move through posts. Increase the
+                                usability of your blog by adding customized
+                                categories, sections, format, or flow. With this
+                                functionality, you’re in full control.
+                            </p>
+                            <!-- </div> -->
                         </div>
                         <div class="info__img--container">
                             <img
