working on the making the designed-for-the-future section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
                                 alt="graphic of a program interface"
                                 class="info__img"
                             />
+
+                            <img
+                                src="images/illustration-editor-mobile.svg"
+                                alt=""
+                                class="info__img--mobile"
+                            />
                         </div>
                     </div>
                 </div>
