--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                                 <li class="menu__li">
                                     <button class="menu-button">Product</button>
                                     <div class="dropdown-content">
-                                        <a href="#!" class="dropdown__link"
+                                        <a
+                                            href="www.google.com"
+                                            class="dropdown__link"
                                             >Pricing</a
                                         >
                                         <a href="#!" class="dropdown__link"
@@ -188,15 +190,35 @@
                     </div>
                 </div>
             </section>
+
+            <section class="state-of-the-art--container">
+                <div class="text-and-image--wrap">
+                    <div class="state-of-the-art__img--wrap">
+                        <img
+                            src="images/illustration-phones.svg"
+                            alt=""
+                            class="state-of-the-art__img"
+                        />
+                    </div>
+                    <div class="state-of-the-art__info--wrap">
+                        <h2 class="info__h2">
+                            State of the Art Infrastructure
+                        </h2>
+                        <p class="info__p">
+                            With reliability and speed in mind, worldwide data
+                            centers provide the backbone for ultra-fast
+                            connectivity. This ensures your site will load
+                            instantly, no matter where your readers are, keeping
+                            your site competitive.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
         <!--       
                     
                  
-                State of the Art
-            Infrastructure With reliability and speed in mind, worldwide data
-            centers provide the backbone for ultra-fast connectivity. This
-            ensures your site will load instantly, no matter where your readers
-            are, keeping your site competitive. Free, open, simple Blogr is a
+                  Free, open, simple Blogr is a
             free and open source application backed by a large community of
             helpful developers. It supports features such as code syntax
             highlighting, RSS feeds, social media integration, third-party
