--- a/index.html
+++ b/index.html
@@ -214,19 +214,47 @@
                     </div>
                 </div>
             </section>
+
+            <section class="laptop-section">
+                <div class="laptop__content--wrap">
+                    <div class="laptop__img--wrap">
+                        <img
+                            src="images/illustration-laptop-desktop.svg"
+                            alt="laptop image"
+                            class="laptop__img"
+                        />
+                        <img
+                            src="images/illustration-laptop-mobile.svg"
+                            alt=""
+                            class="laptop__img--mobile"
+                        />
+                    </div>
+                    <div class="laptop__info--wrap">
+                        <h3 class="top__h3">Free, open, simple</h3>
+                        <p class="top__p">
+                            Blogr is a free and open source application backed
+                            by a large community of helpful developers. It
+                            supports features such as code syntax highlighting,
+                            RSS feeds, social media integration, third-party
+                            commenting tools, and works seamlessly with Google
+                            Analytics. The architecture is clean and is
+                            relatively easy to learn.
+                        </p>
+                        <h3 class="bottom__h3">Powerful tooling</h3>
+                        <p class="bottom__p">
+                            Batteries included. We built a simple and
+                            straightforward CLI tool that makes customization
+                            and deployment a breeze, but capable of producing
+                            even the most complicated sites.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
         <!--       
                     
                  
-                  Free, open, simple Blogr is a
-            free and open source application backed by a large community of
-            helpful developers. It supports features such as code syntax
-            highlighting, RSS feeds, social media integration, third-party
-            commenting tools, and works seamlessly with Google Analytics. The
-            architecture is clean and is relatively easy to learn. Powerful
-            tooling Batteries included. We built a simple and straightforward
-            CLI tool that makes customization and deployment a breeze, but
-            capable of producing even the most complicated sites. Product
+                     Product
             Overview Pricing Marketplace Features Integrations Company About
             Team Blog Careers Connect Contact Newsletter LinkedIn -->
         <!-- 
