--- a/index.html
+++ b/index.html
@@ -251,6 +251,41 @@
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__content--container">
+                <ul class="footer__content--wrap">
+                    <li class="footer__links--wrap">
+                        <img
+                            src="images/logo.svg"
+                            alt="Blogr logo"
+                            class="footer__logo"
+                        />
+                    </li>
+                    <li class="footer__links--wrap">
+                        <h4 class="footer__h4">Product</h4>
+                        <a href="" class="footer__links">Overview</a
+                        ><a href="" class="footer__links">Pricing</a
+                        ><a href="" class="footer__links">Marketplace</a>
+                        <a href="" class="footer__links">Features</a>
+                        <a href="" class="footer__links">Integrations</a>
+                    </li>
+                    <li class="footer__links--wrap">
+                        <h4 class="footer__h4">Company</h4>
+                        <a href="" class="footer__links">About</a
+                        ><a href="" class="footer__links">Team</a
+                        ><a href="" class="footer__links">Blog</a>
+                        <a href="" class="footer__links">Careers</a>
+                    </li>
+                    <li class="footer__links--wrap">
+                        <h4 class="footer__h4">Connect</h4>
+                        <a href="" class="footer__links">Contact</a
+                        ><a href="" class="footer__links">Newsletter</a
+                        ><a href="" class="footer__links">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
         <!--       
                     
                  
