--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             href="./images/favicon-32x32.png"
         />
 
-        <title>Frontend Mentor | [Blogr]</title>
+        <title>Blogr Landing Page</title>
 
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
         <style>
@@ -44,6 +44,12 @@
                                 alt=""
                                 class="hamburger-img"
                             />
+
+                            <img
+                                src="images/icon-close.svg"
+                                alt=""
+                                id="icon-close"
+                            />
                         </button>
                         <!-- this holds the dropdown menu buttons and the login/signup links -->
                         <div class="menu--container">
@@ -52,9 +58,7 @@
                                 <li class="menu__li">
                                     <button class="menu-button">Product</button>
                                     <div class="dropdown-content">
-                                        <a
-                                            href="www.google.com"
-                                            class="dropdown__link"
+                                        <a href="#!" class="dropdown__link"
                                             >Pricing</a
                                         >
                                         <a href="#!" class="dropdown__link"
@@ -71,14 +75,14 @@
                                 <li class="menu__li">
                                     <button class="menu-button">Company</button>
                                     <div class="dropdown-content">
-                                        <a href="" class="dropdown__link"
+                                        <a href="#!" class="dropdown__link"
                                             >About</a
-                                        ><a href="" class="dropdown__link"
+                                        ><a href="#!" class="dropdown__link"
                                             >Team</a
-                                        ><a href="" class="dropdown__link"
+                                        ><a href="#!" class="dropdown__link"
                                             >Blog</a
                                         >
-                                        <a href="" class="dropdown__link"
+                                        <a href="#!" class="dropdown__link"
                                             >Careers</a
                                         >
                                     </div>
@@ -86,11 +90,11 @@
                                 <li class="menu__li">
                                     <button class="menu-button">Connect</button>
                                     <div class="dropdown-content">
-                                        <a href="" class="dropdown__link"
+                                        <a href="#!" class="dropdown__link"
                                             >Contact</a
-                                        ><a href="" class="dropdown__link"
+                                        ><a href="#!" class="dropdown__link"
                                             >Newsletter</a
-                                        ><a href="" class="dropdown__link"
+                                        ><a href="#!" class="dropdown__link"
                                             >LinkedIn</a
                                         >
                                     </div>
@@ -99,13 +103,13 @@
                             <!-- login / signup button wrap -->
                             <ul class="login--wrap">
                                 <li class="login__li">
-                                    <a href="" class="login__a login--btn"
+                                    <a href="#!" class="login__a login--btn"
                                         >Login</a
                                     >
                                 </li>
                                 <li class="login__li">
                                     <a
-                                        href=""
+                                        href="#!"
                                         class="
                                             login__a
                                             signup--btn
@@ -129,9 +133,9 @@
                         Grow your audience and build your online brand
                     </p>
                     <div class="cta__link--wrap">
-                        <a href="" class="button-white start-btn"
+                        <a href="#!" class="button-white start-btn"
                             >Start for Free</a
-                        ><a href="" class="button-outline learn-btn"
+                        ><a href="#!" class="button-outline learn-btn"
                             >Learn More</a
                         >
                     </div>
