--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <!-- menu--container ends -->
+                        <!-- menu-container ends -->
                     </div>
-                    <!-- menu--wrap ends -->
+                    <!-- menu-wrap ends -->
                 </nav>
             </header>
 
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-        <!-- intro--container ends -->
+        <!-- intro-container ends -->
 
         <main class="main">
             <section class="designed-for-the-future--container">
